--- a/css/icons.scss
+++ b/css/icons.scss
@@ -1,7 +1,7 @@
 /**
  * Calendar App
  *
- * @copyright 2018 Georg Ehrke <oc.list@georgehrke.com>
+ * @copyright 2019 Georg Ehrke <oc.list@georgehrke.com>
  *
  * @author Georg Ehrke
  *
@@ -19,16 +19,16 @@
  * License along with this library.  If not, see <http://www.gnu.org/licenses/>.
  *
  */
-@include icon-black-white('briefcase', 'calendar', 2);
+@include icon-black-white('briefcase', 'calendar', 5);
 @include icon-black-white('color-picker', 'calendar', 1);
 @include icon-black-white('embed', 'calendar', 1);
-@include icon-black-white('eye', 'calendar', 3);
+@include icon-black-white('eye', 'calendar', 4);
 @include icon-black-white('invitees-no-response', 'calendar', 5);
-@include icon-black-white('leftarrow', 'calendar', 1);
+@include icon-black-white('leftarrow', 'calendar', 2);
 @include icon-black-white('random', 'calendar', 1);
-@include icon-black-white('reminder', 'calendar', 1);
+@include icon-black-white('reminder', 'calendar', 3);
 @include icon-black-white('reminder-audio', 'calendar', 1);
 @include icon-black-white('reminder-mail', 'calendar', 1);
 @include icon-black-white('repeat', 'calendar', 1);
-@include icon-black-white('rightarrow', 'calendar', 1);
+@include icon-black-white('rightarrow', 'calendar', 2);
 @include icon-black-white('timezone', 'calendar', 1);
